# baselayout

./: COPYRIGHT  ChangeLog  Makefile  STYLE  baselayout-1.6.8.ebuild  default.mk  make_os_release  tarball.sh
awk/: Makefile  cachedepends.awk  cachenetdepends.awk  functions.awk  gendepends.awk  genenviron.awk
conf.d/: Makefile  clock  net.example  rc
conf.d.BSD/: Makefile  clock  net.example  wireless.example
conf.d.Linux/: Makefile  clock  net.example  rc  wireless.example
etc/: DIR_COLORS  Makefile  devfsd.conf  filesystems  fstab  group  hosts  inittab  inputrc  issue  issue.devfix  login.conf  master.passwd  modules.autoload  networks  nsswitch.conf  passwd  profile  protocols  rc.conf  rc.shutdown  services  shells  sysctl.conf
etc.BSD/: COPYRIGHT  Makefile  fstab  group  issue  login.conf  master.passwd  passwd  rc  rc.shutdown
etc.Linux/: Makefile  os-release
etc.Linux/modules.autoload.d/: Makefile
etc.Linux/modules.d/: Makefile
etc/conf.d/: clock  consolefont  cryptfs  crypto-loop  domainname  env_whitelist  env_whitlist  hostname  keymaps  local.start  local.stop  net  net.ppp0  rc  syscons
etc/env.d/: 00basic  50baselayout
etc/etc.fbsd/: fstab  group  passwd  rc  rc.shutdown
etc/modules.autoload.d/: kernel-2.4  kernel-2.5  kernel-2.6
etc/modules.d/: aliases
etc/modutils/: aliases
etc/pam.d/: chsh  ftp  imap  login  netatalk  vlock  xlock
etc/ppp/: chat-default
etc/skel/: .bash_logout  .bash_profile  .bashrc
init.d/: Makefile  atd  bootmisc  checkfs  checkroot  clock  consolefont  crypto-loop  depscan.sh  devfsd  domainname  functions.sh  halt.sh  hostname  keymaps  local  localmount  modules  net  net.eth0  net.eth0-dhcp  net.lo  net.ppp0  netmount  nscd  ntpd  numlock  rc-help.sh  reboot.sh  rmnologin  runscript  runscript.c  runscript.sh  samba  serial  shutdown.sh  single  sshd  svc-dcron  svc-klog  (+8 more)
init.d.Linux/: Makefile  consolefont  keymaps  modules  numlock  reboot.sh  shutdown.sh  volumes
lib/linux/: arch-functions.sh
lib/sysctl.d/: 40-ping_group_range.conf
man/: MAKEDEV.8  Makefile  modules-update.8  modules.autoload.5  rc-depend.8  rc-status.8  rc-update.8  start-stop-daemon.8  update-modules.8
man.Linux/: MAKEDEV.8  Makefile  modules-update.8
net/: Makefile  dhclient.sh  dhcpcd.sh  essidnet.sh  macnet.sh  rename.sh  wpa_supplicant.sh
net-scripts/conf.d/: net  net.example  wireless.example
net-scripts/init.d/: net.lo
net-scripts/net.BSD/: ifconfig.sh
net-scripts/net.Linux/: adsl.sh  arping.sh  bonding.sh  br2684ctl.sh  bridge.sh  clip.sh  dhcpcd.sh  ifconfig.sh  ip6to4.sh  iproute2.sh  iptunnel.sh  iwconfig.sh  macchanger.sh  netplugd.sh  pppd.sh  pump.sh  tuntap.sh  udhcpc.sh  vlan.sh
net.BSD/: Makefile  ifconfig.sh  iwconfig.sh
net.Linux/: Makefile  adsl.sh  apipa.sh  arping.sh  bonding.sh  br2684ctl.sh  bridge.sh  ccwgroup.sh  clip.sh  dhcpcd.sh  ifconfig.sh  ifplugd.sh  ip6to4.sh  ipppd.sh  iproute2.sh  iptunnel.sh  iwconfig.sh  macchanger.sh  netplugd.sh  pppd.sh  pump.sh  rename.sh  tuntap.sh  udhcpc.sh  vlan.sh
po/: Makefile
rc-lists/: boot  default  nonetwork  single
refs/heads/: master
runlevels/: Makefile
runlevels.Linux/: Makefile
sbin/: MAKEDEV  MAKEDEV-gentoo.patch  Makefile  depscan.sh  depscan.sh.bash  env-update.sh  functions.sh  init  init-common-post.sh  init-common-pre.sh  init-functions.sh  init.BSD.sh  init.Linux.sh  init.bsd.sh  init.linux.sh  livecd-functions.sh  modules-update  rc  rc-daemon.sh  rc-envupdate.sh  rc-envupdate.sh.bash  rc-help.sh  rc-services.sh  rc-update  rc.new  runscript.c  runscript.sh  start-stop-daemon.c  startDM.sh  update-modules
sbin.Linux/: Makefile  modules-update
sh/: Makefile  functions.sh  init-common-post.sh  init-common-pre.sh  init-functions.sh  net.sh  rc-daemon.sh  rc-help.sh  rc-services.sh
sh.BSD/: Makefile  init.sh  rc-functions.sh
sh.Linux/: Makefile  init.sh  rc-functions.sh
share/: fstab  issue.devfix  passwd
share.BSD/: Makefile  group
share.Linux/: Makefile  group  passwd
src/: .cvsignore  Makefile  consoletype.c  env_whitelist  filefuncs.c  headers.h  rc-debug.c  rc-debug.h  rc-depend.c  rc-dynbuf.c  rc-dynbuf.h  rc-misc.c  rc-misc.h  rc-str_list.h  runscript.c  start-stop-daemon.c
src/core/: .cvsignore  ChangeLog  ChangeLog.0  Makefile  Makefile.am  NOTES  README  TODO  configure.ac  debug.h  depend.c  depend.h  depscan.c  misc.c  misc.h  parse.c  parse.h  pipes.c  simple-regex.c  simple-regex.h  test-regex.c
src/core/data/: Makefile.am  env_whitelist
src/core/include/rcscripts/: Makefile.am  rccore.h  rcdefines.h.in  rctypes.h  rcutil.h
src/core/include/rcscripts/core/: Makefile.am  services.h
src/core/include/rcscripts/util/: Makefile.am  config.h  debug.h  dynbuf.h  file.h  simple-regex.h  str_list.h  string.h
src/core/include/rscripts/util/: misc.h
src/core/libnss_service/: Makefile.am  README  nss_service.c  nss_service.conf  nss_service.h  service-alias.c  service-automount.c  service-ethers.c  service-ethers.h  service-grp.c  service-hosts.c  service-netgrp.c  service-netgrp.h  service-network.c  service-proto.c  service-pwd.c  service-rpc.c  service-service.c
src/core/librccore/: Makefile.am  depend.c  init.c  parse.c  runlevels.c  scripts.c  services.c
src/core/librccore/api/: depend.h  parse.h  runlevels.h  scripts.h
src/core/librccore/internal/: rccore.h  services.h
src/core/librcscript/: Makefile.am  depend.h  misc.h
src/core/librcscripts/: Makefile.am  debug.c  debug.h  depend.c  depend.h  dynbuf.c  dynbuf.h  misc.c  misc.h  parse.c  parse.h  rcscripts.h  runlevels.c  runlevels.h  scripts.c  scripts.h  simple-regex.c  str_list.h
src/core/librcscripts/api/: debug.h  depend.h  dynbuf.h  misc.h  parse.h  rctypes.h  runlevels.h  scripts.h  simple-regex.h
src/core/librcutil/: Makefile.am  config.c  debug.c  dynbuf.c  file.c  librcutil.map  misc.c  simple-regex.c  string.c
src/core/scripts/: Makefile.am  clean.sh
src/core/src/: Makefile.am  depscan.c  runscript.c
src/core/tests/: Makefile.am  test-dynbuf.c  test-mmap.c  test-regex.c  test-runlevels.c  test-services.c
(+119 files in other folders)
