AUTOMAKE_OPTIONS = foreign

INCLUDES = $(RCSCRIPTS_DEFINES)

lib_LTLIBRARIES = librcscripts.la

librcscripts_la_SOURCES = \
	rcscripts.h    \
	debug.c        \
	debug.h        \
	dynbuf.c       \
	dynbuf.h       \
	list.h         \
	str_list.h     \
	misc.c         \
	misc.h         \
	scripts.c      \
	scripts.h      \
	parse.c        \
	parse.h        \
	depend.c       \
	depend.h       \
	runlevels.c    \
	runlevels.h    \
	simple-regex.c \
	simple-regex.h
