AUTOMAKE_OPTIONS = foreign

INCLUDES = $(RCSCRIPTS_DEFINES)

lib_LTLIBRARIES = librcscripts.la

librcscripts_la_SOURCES = \
	rcscripts.h        \
	api/rctypes.h      \
	debug.c            \
	api/debug.h        \
	misc.c             \
	api/misc.h         \
	api/list.h         \
	api/str_list.h     \
	dynbuf.c           \
	api/dynbuf.h       \
	simple-regex.c     \
	api/simple-regex.h \
	scripts.c          \
	api/scripts.h      \
	runlevels.c        \
	api/runlevels.h    \
	parse.c            \
	api/parse.h        \
	depend.c           \
	api/depend.h
